# keyvalue_server

./: .gitmodules  CMakeLists.txt  CMakePresets.json  lib_config.cmake
.cache/clangd/index/: alignment_test.cpp.02A29E79750D9960.idx  alignment_test.h.25DF6E9621E15FDC.idx  allocator.h.7EEDCCB17442C21F.idx  annotated_binary_text_gen.cpp.F04B3A17BDEDD7FA.idx  annotated_binary_text_gen.h.E583160D1A11F6A6.idx  array.h.23562A82FB440561.idx  async.c.A1ED7F6316BD98BE.idx  base.h.EDB14D38C0E441A8.idx  bfbs_gen.h.71BB4961E4F4CCEE.idx  bfbs_gen_lua.cpp.4509159A445A16E1.idx  bfbs_gen_lua.h.B628875F9DDA922D.idx  bfbs_gen_nim.cpp.54FC425284E39900.idx  bfbs_gen_nim.h.FFE1F38D38FDF6DB.idx  bfbs_namer.h.763E3583DC52297E.idx  binary_annotator.cpp.9044A350EEE4A532.idx  binary_annotator.h.A7FE2D83B1D5E401.idx  buffer.h.886A683334B7B026.idx  buffer_ref.h.F7740FED25038443.idx  code_generator.h.DF9EB6C330AD8733.idx  code_generators.cpp.8F2F061AF95E03CC.idx  code_generators.h.7DF0F9B673CFB0D2.idx  core.c.1729860242E9B5F9.idx  cpp_generator.cc.F1D2DC68A2305601.idx  cpp_generator.h.42330C538AFCA75D.idx  default_allocator.h.ED98E70A9332BA94.idx  detached_buffer.h.8080172E24A35727.idx  dl.c.7BB91554F5CDEFE8.idx  errno.h.5F66E2C19E2223BD.idx  evolution_test.cpp.D4B5912B7FE8B761.idx  evolution_test.h.D44099993E1ADB5E.idx  evolution_v1_generated.h.DD52AB0EE080BA0B.idx  evolution_v2_generated.h.B38B4CFFFD6E6108.idx  file_binary_writer.cpp.E6EF33865343F91A.idx  file_manager.h.8E51FAF45BFCE504.idx  file_name_saving_file_manager.cpp.36A61FA8B39D4A52.idx  file_writer.cpp.10795CA46D368440.idx  flatbuffer_builder.h.0389069EC93473A2.idx  flatbuffers.h.E28F46848673B747.idx  flatc.cpp.63429C9D39F72A98.idx  flatc.h.C70C302E5292D110.idx  (+164 more)
.github/workflows/: build.yml
include/: error_codes.h  fbwrapper.h  hashtable.h  ringbuffer.hpp  transport.h  transport_helpers.h
resources/: ctest_requests.json
src/: main.cpp
src/client/: main.cpp
src/client_async/: main.cpp
src/client_boost/: main.cpp
src/server/: daemonize.c  daemonize.cpp  fbwrapper.cpp  hashtable.cpp  main.c  main.cpp
